Fixing bug 293224. Matrix from getScreenCTM should be to initial viewport space. r+sr=tor@acm.org